<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_alarme"
        android:orderInCategory="100"
        android:title="@string/action_alarme"
        app:showAsAction="always|withText"
        android:icon="@drawable/action_alarme" />

    <item
        android:id="@+id/action_tarefas"
        android:orderInCategory="100"
        android:title="@string/action_tarefas"
        app:showAsAction="always"
        android:icon="@drawable/action_tarefas"/>
    <item
        android:id="@+id/action_msg"
        android:orderInCategory="100"
        android:title="@string/action_msg"
        app:showAsAction="always|withText"
        android:icon="@drawable/action_msg"/>

    <item
        android:id="@+id/action_sair"
        android:orderInCategory="100"
        android:title="@string/action_sair"
        app:showAsAction="never"
        android:icon="@drawable/action_sair" />/>
    <item
        android:id="@+id/action_bloquear"
        android:orderInCategory="100"
        android:title="@string/action_bloquear"
        android:icon="@drawable/ic_lock" />
</menu>
<!-- menu | em cima do ecra do lado direito - menu sempre presente -->